fixed empty buttons showing white on dark mode

--- a/src/components/Calendar/Calendar.sass
+++ b/src/components/Calendar/Calendar.sass
@@ -10,6 +10,7 @@
 .hidden-button
     height: 12vh
     width: 12vw
+    opacity: 0
 
 .day-button
     height: 12vh
